Added navbar, added css and dependencies

--- a/package.json
+++ b/package.json
@@ -1,23 +1,31 @@
 {
   "name": "nasa-time-warp",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Discover Climate Change with NASA Sattelites",
+  "main": "index.html",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.12.1",
     "bootstrap": "^4.0.0",
+    "font-awesome": "^4.7.0",
+    "fontawesome": "^5.6.3",
     "jquery": "^3.3.1",
     "n": "^6.3.1",
+    "onchange": "^3.3.0",
+    "parallelshell": "^3.0.1",
     "popper.js": "^1.12.9"
   },
   "devDependencies": {
-    "lite-server": "^2.3.0"
+    "lite-server": "^2.3.0",
+    "node-sass": "^4.12.0"
   },
-  "description": "Discover Climate Change with NASA Sattelites",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lite": "lite-server",
-    "start": "npm run lite"
+    "start": "npm run watch:all",
+    "scss": "node-sass -o css/ css/",
+    "watch:scss": "onchange 'css/*.scss' -- npm run scss",
+    "watch:all": "parallelshell 'npm run watch:scss' 'npm run lite'"
   },
-  "author": "",
+  "author": "Loren Murphy",
   "license": "ISC"
 }
